# nb-sensors

./: .gitignore  Sensors-01--Inspect-Data.ipynb  Sensors-02--Compare-Data.ipynb  Sensors-03--Crossplot.ipynb  convert-exo-to-parquet.ipynb  convert-hobo-xlsx-to-parquet.ipynb  convert-mayfly-to-parquet.ipynb  convert-wx-to-parquet.ipynb  pixi.toml  plot-multiple-sensors.ipynb  pyproject.toml  sensor_helpers.py
data/dst/: 21852517 2024-07-22 10_25_20 UTC (Data UTC).parquet  FM-Temp-21695007-CB 2024-07-22 10_20_59 UTC (Data UTC).parquet  FM-Temp-21852518-LB 2024-07-22 10_18_03 UTC (Data UTC).parquet  FM-Temp-21852519 2024-07-22 10_21_36 UTC (Data UTC).parquet  FM-Temp-21852521-FD 2024-07-22 10_22_54 UTC (Data UTC).parquet  FM-Temp-21852524-CT 2024-07-22 10_26_09 UTC (Data UTC).parquet  hobo-locations.csv  hobo-locations.gpkg  mayfly_GMI_CTD1.parquet  mayfly_GMI_CTD3.parquet  mayfly_GMI_CTD5.parquet  mayfly_GMI_CTD6.parquet  mayfly_GMI_CTD7.parquet  mayfly_GMI_CTD8.parquet
data/src/exo/: LCCD_Little_Conestoga_Sonde_Data_May_2023_-_July_202.csv
data/src/hobo/: 21852517 2024-07-22 10_25_20 EDT (Data EDT).xlsx  21963948 2024-09-26 09_05_40 EDT (Data EDT).xlsx  21963949 2024-09-26 09_12_21 EDT (Data EDT).xlsx  21963950 2024-09-26 09_26_11 EDT (Data EDT).xlsx  21963951 2024-09-26 09_05_01 EDT (Data EDT).xlsx  FM-Temp-21695005 2024-09-14 13_49_22 EDT (Data EDT).xlsx  FM-Temp-21695007-CB 2024-07-22 10_20_59 EDT (Data EDT).xlsx  FM-Temp-21695007-CB 2024-09-14 10_54_37 EDT (Data EDT).xlsx  FM-Temp-21695008-CB 2024-09-14 12_38_17 EDT (Data EDT).xlsx  FM-Temp-21852518-LB 2024-07-22 10_18_03 EDT (Data EDT).xlsx  FM-Temp-21852518-LB 2024-09-14 11_19_31 EDT (Data EDT).xlsx  FM-Temp-21852519 2024-07-22 10_21_36 EDT (Data EDT).xlsx  FM-Temp-21852519 2024-09-14 11_28_52 EDT (Data EDT).xlsx  FM-Temp-21852520 2024-09-14 15_06_56 EDT (Data EDT).xlsx  FM-Temp-21852521-FD 2024-07-22 10_22_54 EDT (Data EDT).xlsx  FM-Temp-21852521-FD 2024-09-14 11_53_27 EDT (Data EDT).xlsx  FM-Temp-21852524-CT 2024-07-22 10_26_09 EDT (Data EDT).xlsx  FM-Temp-21852524-CT 2024-09-14 12_46_37 EDT (Data EDT).xlsx  FM-Temp-21852525-MH 2024-09-14 14_39_40 EDT (Data EDT).xlsx
(+4 files in other folders)
