[project]
name = "nb-sensors"
authors = [
  {name = "Michael Rahnis", email = "mike@topomatrix.com"},
]
description = "Notebooks working with various sensor data"
dynamic = ["version"]
readme = "README.md"
keywords = ["hobo", "mayfly", "exo", "temperature", "timeseries"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3"
]

requires-python = ">=3.9"

dependencies = [ "scipy", "pandas", "matplotlib", "pytz", "numpy", "colorcet", "astropy>=7.0.1,<8", "jupyterlab>=4.3.5,<5", "notebook>=7.3.2,<8", "openpyxl>=3.1.5,<4", "xlrd>=2.0.1,<3", "pyarrow>=19.0.0,<20", "bokeh>=3.6.3,<4", "ipywidgets>=8.1.5,<9", "lxml>=5.3.0,<6", "holoviews>=1.20.0,<2", "dask>=2025.1.0,<2026", "scikit-learn>=1.6.1,<2"]


[project.urls]
Homepage = "https://topomatrix.com"
Documentation = "https://readthedocs.org"
Repository = "https://github.com/mrahnis/nb-sensors/nb-sensors.git"

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["win-64", "osx-64", "osx-arm64"]

[tool.pixi.environments]
default = { solve-group = "default" }

[tool.pixi.tasks]

[tool.pixi.dependencies]
datashader = ">=0.17.0,<0.18"
seaborn = ">=0.13.2,<0.14"
